<?xml version="1.1"?>
<package format="2">
  <name>vmxpi_ros</name>
  <version>0.0.0</version>
  <description>The vmxpi_ros_utils package</description>

  <maintainer email="harrisontieu@studica.com">Harrison Tieu</maintainer>
  <maintainer email="charlesa@studica.com">Charles Adeyanju</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
