<?xml version="1.0"?>
<package format="2">
  <name>vmxpi_ros_cam</name>
  <version>0.0.0</version>
  <description>The vmxpi_ros_cam package</description>

  <maintainer email="harrisontieu@studica.com">Harrison Tieu</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>vmxpi_ros</depend>
  <depend>dynamic_reconfigure</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
