<?xml version="1.0"?>
<package format="2">
  <name>vmxpi_ros_io</name>
  <version>0.0.0</version>
  <description>The vmxpi_ros_io package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="harrisontieu@studica.com">Harrison Tieu</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>vmxpi_ros</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
