<?xml version="1.0"?>
<package format="2">
  <name>vmxpi_ros_navx</name>
  <version>0.0.0</version>
  <description>The vmxpi_ros_navx package</description>

  <maintainer email="harrisontieu@studica.com">Harrison Tieu</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>vmxpi_ros</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
