<?xml version="1.0"?>
<package format="2">
  <name>vmxpi_ros_cobra</name>
  <version>0.0.0</version>
  <description>The vmxpi_ros_cobra package</description>

  <maintainer email="harrisontieu@studica.com">Harrison Tieu</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>vmxpi_ros</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
